# WebAgent

./: .gitignore  PlaywrightAutomation.java  PlaywrightAutomationTemp.java  README.md  VerifyAdminLoginOnPartnerPortal.java  VerifyCatalogOptionsNavigation.java  dummy_upload.txt  multi_testcase.xlsx  pyproject.toml  requirements.txt  standard_testcase.xlsx  test_form.html  test_steps.txt  test_steps.xlsx  test_steps_local.txt  web_agent.py  web_driver_utils.py  web_main.py  web_mcp_server.py  web_report_TestStepsLocal.html  web_report_VerifyProductPageAfterLogin.html  web_reporter.py  ~$multi_testcase.xlsx
.agents/skills/web_agent_runner/: SKILL.md
test-output/: emailable-report.html  index.html  testng-results.xml
test-output/Command line suite/: Command line test.html  Command line test.xml  testng-failed.xml
test-output/junitreports/: TEST-com.example.PlaywrightAutomation.xml
